# hasktorch

./: graph.cpp
.github/workflows/: haskell.yml  nix-linux-rocm.yml  stack-linux.yml
examples/mnist-mlp/: Main.hs
examples/static-mnist/: Common.hs
examples/static-mnist-cnn/: Main.hs
experimental/: experimental.cabal
experimental/darknet/: DarknetSpec.hs
experimental/darknet-cli/: Main.hs
experimental/darknet-spec/: DarknetSpec.hs
experimental/darknet/Torch/Vision/Darknet/: Config.hs  Forward.hs  Spec.hs
experimental/resnet_torchscript/: Main.hs
experimental/smoothgrad/: Main.hs
experimental/yolov3/: Main.hs
experimental/yolov3/Torch/Vision/Darknet/: Config.hs  Forward.hs  Spec.hs
hasktorch/: hasktorch.cabal
hasktorch/src/: Torch.hs
hasktorch/src/Torch/: Autograd.hs  DType.hs  Functional.hs  NN.hs  Script.hs  Tensor.hs  Vision.hs
hasktorch/src/Torch/Distributions/: Categorical.hs
hasktorch/src/Torch/Typed/: Aux.hs  Tensor.hs  Vision.hs
hasktorch/test/: HalfSpec.hs
libtorch-ffi/src/Torch/Unmanaged/: Autograd.hs
nix/: shared.nix
