cabal-version:       2.2
name:                experimental
version:             0.2.0.0
synopsis:            experimental projects for hasktorch
-- description:
homepage:            https://github.com/hasktorch/hasktorch#readme
license:             BSD-3-Clause
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2019 Austin Huang
category:            Machine Learning
build-type:          Simple

common config
  default-language:    Haskell2010
  ghc-options:         -fplugin GHC.TypeLits.Normalise -fplugin GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=0 -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , ghc-typelits-extra
                     , ghc-typelits-knownnat
                     , ghc-typelits-natnormalise
                     , mtl

executable untyped-nlp
  import:              config
  hs-source-dirs:      untyped-nlp
  main-is:             Main.hs

executable dataloader-cifar10
  import:              config
  hs-source-dirs:      dataloader-cifar10
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures -rtsopts
  build-depends:       bytestring >= 0.10.8
                     , random >= 1.1
                     , safe-exceptions
                     , datasets
                     , streaming
                     , JuicyPixels

executable bounding-box
  import:              config
  hs-source-dirs:      bounding-box
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures -rtsopts
  build-depends:       bytestring >= 0.10.8
                     , JuicyPixels
                     , safe-exceptions
                     , split

executable yolov3
  import:              config
  hs-source-dirs:      yolov3
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures -rtsopts
  build-depends:       bytestring >= 0.10.8
                     , darknet
                     , JuicyPixels
                     , safe-exceptions
                     
library darknet
  import:              config
  hs-source-dirs:      darknet
  exposed-modules:     Torch.Vision.Darknet.Spec
                     , Torch.Vision.Darknet.Config
                     , Torch.Vision.Darknet.Forward
  ghc-options:         -fno-warn-partial-type-signatures -rtsopts
  build-depends:       hasktorch
                     , text
                     , containers
                     , config-ini
                     , bytestring
                     , safe-exceptions

test-suite darknet-spec
  import:             config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     darknet-spec
  main-is:            DarknetSpec.hs
  build-depends:      base >= 4.7 && < 5
                    , hasktorch
                    , darknet
                    , containers
                    , bytestring
                    , hspec
                    , safe-exceptions

